# Maps4

./: meson.build  org.theblueoompaloompa.Maps4.json  org.theblueoompaloompa.Maps4.json~
data/: meson.build  org.theblueoompaloompa.Maps4.appdata.xml.in  org.theblueoompaloompa.Maps4.desktop.in  org.theblueoompaloompa.Maps4.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.cpp  maps4.gresource.xml  meson.build
